------------------------------
- Split out the '==' behavior in ParserElement, now implemented
  as the matches() method. Using '==' for string test purposes will
  be removed in a future release.

- Expanded capabilities of runTests(). Will now accept embedded
  comments (default is Python style, leading '#' character, but 
  customizable). Comments will be emitted along with the tests and
  test output. Useful test development, to create a test string
  consisting only of test case description comments separated by 
  blank lines, and then fill in the test cases.

- Added a 'pyparsing_common' class containing common/helpful little 
  expressions such as integer, float, identifier, etc. I used this 
  class as a sort of embedded namespace, to contain these helpers 
  without further adding to pyparsing's namespace bloat.


Version 2.1.3 - May, 2016
------------------------------
- _trim_arity fix in 2.1.2 was very version-dependent on Py 3.5.0.
  Now works for Python 2.x, 3.3, 3.4, 3.5.0, and 3.5.1 (and hopefully
  beyond).


Version 2.1.2 - May, 2016
------------------------------
- Fixed bug in _trim_arity when pyparsing code is included in a
  PyInstaller, reported by maluwa.

- Fixed catastrophic regex backtracking in implementation of the
  quoted string expressions (dblQuotedString, sglQuotedString, and
  quotedString). Reported on the pyparsing wiki by webpentest,
  good catch! (Also tuned up some other expressions susceptible to the 
  same backtracking problem, such as cStyleComment, cppStyleComment, 
  etc.)


Version 2.1.1 - March, 2016
---------------------------
- Added support for assigning to ParseResults using slices.

- Fixed bug in ParseResults.toDict(), in which dict values were always
  converted to dicts, even if they were just unkeyed lists of tokens.
  Reported on SO by Gerald Thibault, thanks Gerald!

- Fixed bug in SkipTo when using failOn, reported by robyschek, thanks!

- Fixed bug in Each introduced in 2.1.0, reported by AND patch and